--- a/docs/访问权限控制.md
+++ b/docs/访问权限控制.md
@@ -1,4 +1,5 @@
-## 为什么要控制访问权限
+# Java 控制访问权限
+---
 
 一个类库开发者（开发对外提供的接口）需要修改和不断完善自己的代码，以使其更可读、更易理解并更可维护，但之前的消费者却希望你的代码在某些方面保持不变，要不然他们的代码将不能正常工作，如果你不清楚哪些接口被调用过，那么你便会束手束脚，无法对任何事物做改动。
 
