--- a/docs/basic/泛型.md
+++ b/docs/basic/泛型.md
@@ -165,7 +165,7 @@ public class Box<T> {
 ```
 我们发现，在使用泛型类时，虽然传入了不同的泛型实参，但并没有真正意义上生成不同的类型，究其原因，在于Java中的泛型只是作用于代码编译阶段，在编译过程中，对于正确检验泛型结果后，会将泛型的相关信息擦出，也就是说，成功编译过后的class文件中是不包含任何泛型信息的。泛型信息不会进入到运行时阶段。**泛型类型在逻辑上可以看成是多个不同的类型，实际上都是相同的基本类型。**
 
-编写泛型类时，要特别注意，泛型类型<T>不能用于静态方法。如下所示
+编写泛型类时，要特别注意，**静态泛型方法需要在方法声明所有使用到的泛型，all generic types must be added to the method signature**。如下所示
 
 ```Java
 public class Pair<T> {
@@ -187,7 +187,20 @@ public class Pair<T> {
     public static <T> Pair<T> create(T first, T last) {
         return new Pair<T>(first, last);
     }
+
+    // all generic types must be added to the method signature,  <T, G>
+    public static <T, G> List<G> fromArrayToList(T[] a, Function<T, G> mapperFunction) {
+	    return Arrays.stream(a)
+	      .map(mapperFunction)
+	      .collect(Collectors.toList());
+    }
 }
+
+
+
+
+// 
+
 ```
 
 ## 类型通配符
@@ -205,7 +218,7 @@ public static void getData(Box<Number> data) {
 	System.out.println("data :" + data.getData());
 }
 ```
-由于Number是Integer的父类，理所当然认为`getData(Box<Number> data)`方法可以应用于`Box<Integer>`，然而会看到编译报错，这说明了 Box<Number> 在逻辑上不能视为 Box<Integer>的父类。但是我们需要一个在逻辑上可以用来表示同时是 Box<Integer> 和 Box<Number>的父类的一个引用类型，由此，类型通配符应运而生。
+由于 Number 是 Integer 的父类，理所当然认为`getData(Box<Number> data)`方法可以应用于`Box<Integer>`，然而会看到编译报错，这说明了 Box<Number> 在逻辑上不能视为 Box<Integer>的父类。但是我们需要一个在逻辑上可以用来表示同时是 Box<Integer> 和 Box<Number>的父类的一个引用类型，由此，类型通配符应运而生。
 
 **类型通配符一般是使用`?`代替具体的类型实参。且 Box<?> 在逻辑上是`Box<Integer>`、`Box<Number>`...等所有`Box<具体类型实参>`的父类。由此，我们依然可以定义泛型方法，来完成此类需求。** 所以将`getData()`方法改为以下这样即可：
 
@@ -218,6 +231,11 @@ public static void getData(Box<?> data) {
 }
 //或者, 类型实参只能是Number类及其子类
 public static void getData(Box<? extends Number> data) {
+	System.out.println("data :" + data.getData());
+}
+
+//支持多继承
+public static void getData(Box<T extends Number & Comparable> data) {
 	System.out.println("data :" + data.getData());
 }
 ```
@@ -273,3 +291,8 @@ public class IntList extends ArrayList<Integer> {
 ## 总结
 
 泛型使用最多的还是各种容器类，一定程度上可以说正是因为创造容器类的需要Java才引入了泛型的概念，但是泛型的思想也可以应用到其它适合的地方，**泛型是一种方法，通过它可以编写出更`泛化`的代码，这些代码对于它所能作用的类型有更少的限制，因此单个代码可以应用到更多的类型上。**
+
+## 参考
+
+- [The Basics of Java Generics - baeldung](https://www.baeldung.com/java-generics)
+- [什么是泛型 - 廖雪峰](https://www.liaoxuefeng.com/wiki/1252599548343744/1265102638843296)
